# freewili2-fullduplex-audio

./: .gitignore  CMakeLists.txt  CMakeLists.txt.tmp.27380.5c83a054e223  README.md
docs/superpowers/: bench-validation-checklist.md
docs/superpowers/findings/: 2026-06-19-fullduplex-e2e.md
docs/superpowers/plans/: 2026-06-19-external-mic-validation.md  2026-06-19-fullduplex-speaker-mic.md
docs/superpowers/specs/: 2026-06-19-external-mic-validation-design.md  2026-06-19-fullduplex-speaker-mic-design.md
src/: main.c
src/audio/: audio_i2s_rx.c  audio_i2s_rx.h  codec_nau88c10.c  codec_nau88c10.h  i2s_rx.pio  vu_capture.c  vu_capture.h
src/display/: st7796.c  st7796.h
src/platform/: board.c  board.h  ioexp_pcal6524.c  ioexp_pcal6524.h
tests/: test_tone_gen.py  test_vu_meter.py
tests/host/: tone_gen_harness.c  vu_meter_harness.c
tools/: build.ps1  flash.ps1  rtt.ps1
tools/screencap/: analyze_tone.py  capture_e2e.ps1  diag_spectrum.py
